@@ -51,6 +51,20 @@ before creating the toolbar:
   wxSystemOptions::SetOption(wxT("msw.remap"), 0);
 \end{verbatim}
 
+If you wish to use 32-bit images (which include an alpha channel for transparency)
+use:
+
+\begin{verbatim}
+  wxSystemOptions::SetOption(wxT("msw.remap"), 2);
+\end{verbatim}
+
+then colour remapping is switched of, and a transparent background used. But only
+use this option under Windows XP with true colour:
+
+\begin{verbatim}
+  (wxTheApp->GetComCtl32Version() >= 600 && ::wxDisplayDepth() >= 32)
+\end{verbatim}
+
 \wxheading{Window styles}
 
 \twocolwidtha{5cm}
